--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <link rel="stylesheet" href="./cdn.dorik.com/6384ff728c1aac0011542c9f/css/index10f5.css?v=1722866614984"/>
         <link rel="stylesheet" href="./assets.dorik.io/shared/aos.css"/>   
     </head>
-    <body style="height: 100vh;">   
+    <body style="height: 100vh; overflow: hidden;">   
         <section style="display: flex; justify-content: center; align-items: center; flex-direction: column; height: 100vh; padding: 0;" class="dorik-section dorik-section-q9dh7rlb  color-overlay">
             <div class="">
                 <div class="container dorik-row-c6fx6ygp-wrapper" data-aos="fade">
